wk_taa_taaqa/src/objects/Lead.object
<CustomObject>
    <fields>
        <fullName>RL_SAA__c</fullName>
        <defaultValue>true</defaultValue>
        <description>RL Sem - Accounting &amp; Audit</description>
        <inlineHelpText>RL Sem - Accounting &amp; Audit</inlineHelpText>
        <label>RLSEMAA-Acct Audit Seminars</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>RL_SFE__c</fullName>
        <defaultValue>true</defaultValue>
        <description>RL Sem - Finance &amp; Estate Planning</description>
        <inlineHelpText>RL Sem - Finance &amp; Estate Planning</inlineHelpText>
        <label>RLSEMFEP-Fin Est Plan Seminars</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>RL_SFI__c</fullName>
        <defaultValue>true</defaultValue>
        <description>RL Sem - Federal Tax Individual</description>
        <inlineHelpText>RL Sem - Federal Tax Individual</inlineHelpText>
        <label>RLSEMFT-Federal Tax Seminars</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>RL_SIT__c</fullName>
        <defaultValue>true</defaultValue>
        <description>RL Sem - International Tax</description>
        <inlineHelpText>RL Sem - International Tax</inlineHelpText>
        <label>RLSEMIT-Intl Tax Seminars</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>RL_SST__c</fullName>
        <defaultValue>true</defaultValue>
        <description>RL Sem - State Tax</description>
        <inlineHelpText>RL Sem - State Tax</inlineHelpText>
        <label>RLSEMST-State Tax Seminars</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>RL_STR__c</fullName>
        <defaultValue>true</defaultValue>
        <description>RL State Tax Research</description>
        <inlineHelpText>RL State Tax Research</inlineHelpText>
        <label>RLST-State Tax Research</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Rating_Copy__c</fullName>
        <formula>TEXT(Rating)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Rating Copy</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Rating_Hot__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Rating - Hot</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Rating_Warm__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Rating - Warm</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Reason__c</fullName>
        <label>Reason</label>
        <type>Picklist</type>
        <valueSet>
            <controllingField>Status</controllingField>
            <valueSetDefinition>
                <sorted>true</sorted>
                <value>
                    <fullName>Bad Info</fullName>
                </value>
                <value>
                    <fullName>Budget Cuts</fullName>
                </value>
                <value>
                    <fullName>Competitor</fullName>
                </value>
                <value>
                    <fullName>Currently Has this Product</fullName>
                </value>
                <value>
                    <fullName>Future Pipeline Potential</fullName>
                </value>
                <value>
                    <fullName>Interest in CPE Only</fullName>
                </value>
                <value>
                    <fullName>Lost to Competition</fullName>
                </value>
                <value>
                    <fullName>Multiple Leads from Same Firm</fullName>
                </value>
                <value>
                    <fullName>No Response</fullName>
                </value>
                <value>
                    <fullName>Not Interested - Ever</fullName>
                </value>
                <value>
                    <fullName>Outsourced</fullName>
                </value>
                <value>
                    <fullName>SAM/NA Seeking Tips Only</fullName>
                </value>
                <value>
                    <fullName>Spam</fullName>
                </value>
                <value>
                    <fullName>Stayed with Competitor</fullName>
                </value>
                <value>
                    <fullName>Unable to Verify</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Referring_Team__c</fullName>
        <inlineHelpText>Only used for the CCH Preferred SPIFF campaign</inlineHelpText>
        <label>Referring Team</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>FSR</fullName>
                </value>
                <value>
                    <fullName>Retention</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Related_Account__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Lookup field to Accounts that allow associating a Lead to an existing Account record</description>
        <label>Related Account</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Leads</relationshipLabel>
        <relationshipName>Leads</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Related_Contact__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Lookup field to Contacts that allow associating a Lead to an existing Contact record.</description>
        <label>Related Contact</label>
        <lookupFilter>
            <active>true</active>
            <filterItems>
                <field>Contact.AccountId</field>
                <operation>equals</operation>
                <valueField>$Source.Related_Account__c</valueField>
            </filterItems>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>Leads</relationshipLabel>
        <relationshipName>Leads</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Related_Opportunity__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Related Opportunity</label>
        <referenceTo>Opportunity</referenceTo>
        <relationshipLabel>Leads</relationshipLabel>
        <relationshipName>Leads</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>SFS_CID3__c</fullName>
        <label>SFS CID</label>
        <length>15</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SIC_Code__c</fullName>
        <label>SIC Code</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SP_AAW__c</fullName>
        <defaultValue>true</defaultValue>
        <description>SW Account &amp; Audit Workflow</description>
        <inlineHelpText>SW Account &amp; Audit Workflow</inlineHelpText>
        <label>SWAAW-Acct Audit Workflow</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>SP_CDT__c</fullName>
        <defaultValue>true</defaultValue>
        <description>SW Corporate Direct Tax</description>
        <inlineHelpText>SW Corporate Direct Tax</inlineHelpText>
        <label>SWCDT-Corp Direct Tax</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>SP_CFM__c</fullName>
        <defaultValue>true</defaultValue>
        <description>SW CPA Firm Management</description>
        <inlineHelpText>SW CPA Firm Management</inlineHelpText>
        <label>SWCPA-CPA Firm Management</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>SP_CFT__c</fullName>
        <defaultValue>true</defaultValue>
        <description>SW CPA Firm Technology</description>
        <inlineHelpText>SW CPA Firm Technology</inlineHelpText>
        <label>SWCFT-CPA Firm Technology</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>SP_CIT__c</fullName>
        <defaultValue>true</defaultValue>
        <description>SW Corporate Indirect Tax</description>
        <inlineHelpText>SW Corporate Indirect Tax</inlineHelpText>
        <label>SWCIT-Corp Indirect Tax</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Sale_Rep_Role__c</fullName>
        <label>Sales Rep Role</label>
        <length>150</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Sales_Alignment_Staging__c</fullName>
        <label>Sales Alignment (Staging)</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Software</fullName>
                </value>
                <value>
                    <fullName>R&amp;L</fullName>
                </value>
                <value>
                    <fullName>Indirect</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Sales_Alignment__c</fullName>
        <label>Sales Alignment</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>RC - Corporate Software</fullName>
                </value>
                <value>
                    <fullName>Global Solution Consultant</fullName>
                </value>
                <value>
                    <fullName>National Solution Consultant</fullName>
                </value>
                <value>
                    <fullName>Strategic Solution Consultant</fullName>
                </value>
                <value>
                    <fullName>RSC - Mid-Market Pro SW</fullName>
                </value>
                <value>
                    <fullName>RSC - Mid-Market Corp SW</fullName>
                </value>
                <value>
                    <fullName>ISC - Mid-Market Other</fullName>
                </value>
                <value>
                    <fullName>RC - Small Firms Premier</fullName>
                </value>
                <value>
                    <fullName>RC - Refunds Today</fullName>
                </value>
                <value>
                    <fullName>RSC - Small Market Field</fullName>
                </value>
                <value>
                    <fullName>ISC - Small Market N2N</fullName>
                </value>
                <value>
                    <fullName>ISC - Small Market N2E</fullName>
                </value>
                <value>
                    <fullName>SSC - Microsoft</fullName>
                </value>
                <value>
                    <fullName>RSC - Microsoft</fullName>
                </value>
                <value>
                    <fullName>ISC - Microsoft</fullName>
                </value>
                <value>
                    <fullName>ISC - Small Market R&amp;L</fullName>
                </value>
                <value>
                    <fullName>RSC - R&amp;L Field</fullName>
                </value>
                <value>
                    <fullName>RSC - R&amp;L Key Accounts</fullName>
                </value>
                <value>
                    <fullName>RC - Software Retention</fullName>
                </value>
                <value>
                    <fullName>RC - Small Firms Retention</fullName>
                </value>
                <value>
                    <fullName>RC - Small Firms R&amp;L</fullName>
                </value>
                <value>
                    <fullName>RC - R&amp;L Retention</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Services_Offered__c</fullName>
        <label>Services Offered</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <sorted>true</sorted>
                <value>
                    <fullName>After-the-fast Payroll</fullName>
                </value>
                <value>
                    <fullName>Audit</fullName>
                </value>
                <value>
                    <fullName>Bookkeeping</fullName>
                </value>
                <value>
                    <fullName>Compilations and reviews</fullName>
                </value>
                <value>
                    <fullName>Live Payroll</fullName>
                </value>
                <value>
                    <fullName>Other</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Submitted_By__c</fullName>
        <description>Used for Small Market Lead Share</description>
        <inlineHelpText>Used for Small Market Lead Share</inlineHelpText>
        <label>Submitted By</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Timing_of_STG_Implementation__c</fullName>
        <inlineHelpText>STG CFA Web Form&apos;s Only</inlineHelpText>
        <label>Timing of STG implementation</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Within next 12 months</fullName>
                </value>
                <value>
                    <fullName>Between 13 to 24 months</fullName>
                </value>
                <value>
                    <fullName>Greater than 24 months</fullName>
                </value>
                <value>
                    <fullName>No plans at this time/Don&apos;t Know</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Trust_Accounting_System__c</fullName>
        <label>Trust Accounting System</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Accutech</fullName>
                </value>
                <value>
                    <fullName>FIS</fullName>
                </value>
                <value>
                    <fullName>Fi-Tek</fullName>
                </value>
                <value>
                    <fullName>Infovisa</fullName>
                </value>
                <value>
                    <fullName>Innovest</fullName>
                </value>
                <value>
                    <fullName>Metavante</fullName>
                </value>
                <value>
                    <fullName>SEI</fullName>
                </value>
                <value>
                    <fullName>SunGard Addvantage</fullName>
                </value>
                <value>
                    <fullName>SunGard Charlotte</fullName>
                </value>
                <value>
                    <fullName>SunGard Global Plus</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Trust_Focus_Account__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Trust Focus Account</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>TwoTrial_Campaign_ID__c</fullName>
        <description>Populated from TwoTrial Campaign ID on the Contact to create the Campaign Member record for the Lead</description>
        <inlineHelpText>Populated from TwoTrial Campaign ID on the Contact to create the Campaign Member record for the Lead</inlineHelpText>
        <label>TwoTrial Campaign ID</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>WK_LEGACY_SUBSCRIBERKEY__c</fullName>
        <label>WK_LEGACY_SUBSCRIBERKEY</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Ways_to_enhance_business__c</fullName>
        <label>Ways to enhance business</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Would like more information about your software solutions</fullName>
                </value>
                <value>
                    <fullName>Interested in additional Tax Research solutions</fullName>
                </value>
                <value>
                    <fullName>Interested in Productivity tools</fullName>
                </value>
                <value>
                    <fullName>Interested in Practice Management</fullName>
                </value>
                <value>
                    <fullName>Interested in Client Portals</fullName>
                </value>
                <value>
                    <fullName>Interested in Accounting software</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>X1040__c</fullName>
        <label>1040</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>1-250</fullName>
                </value>
                <value>
                    <fullName>251-500</fullName>
                </value>
                <value>
                    <fullName>500+</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>X1041__c</fullName>
        <label>1041</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>1-50</fullName>
                </value>
                <value>
                    <fullName>51-149</fullName>
                </value>
                <value>
                    <fullName>150+</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>X1065__c</fullName>
        <label>1065</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>1-50</fullName>
                </value>
                <value>
                    <fullName>51-149</fullName>
                </value>
                <value>
                    <fullName>150+</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>X1120S__c</fullName>
        <label>1120S</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>1-50</fullName>
                </value>
                <value>
                    <fullName>51-149</fullName>
                </value>
                <value>
                    <fullName>150+</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>et4ae5__HasOptedOutOfMobile__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Mobile Opt Out</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>et4ae5__Mobile_Country_Code__c</fullName>
        <label>Mobile Country Code</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>US</fullName>
                    <default>true</default>
                </value>
                <value>
                    <fullName>AC</fullName>
                </value>
                <value>
                    <fullName>AD</fullName>
                </value>
                <value>
                    <fullName>AE</fullName>
                </value>
                <value>
                    <fullName>AF</fullName>
                </value>
                <value>
                    <fullName>AG</fullName>
                </value>
                <value>
                    <fullName>AI</fullName>
                </value>
                <value>
                    <fullName>AL</fullName>
                </value>
                <value>
                    <fullName>AM</fullName>
                </value>
                <value>
                    <fullName>AO</fullName>
                </value>
                <value>
                    <fullName>AQ</fullName>
                </value>
                <value>
                    <fullName>AR</fullName>
                </value>
                <value>
                    <fullName>AS</fullName>
                </value>
                <value>
                    <fullName>AT</fullName>
                </value>
                <value>
                    <fullName>AU</fullName>
                </value>
                <value>
                    <fullName>AW</fullName>
                </value>
                <value>
                    <fullName>AX</fullName>
                </value>
                <value>
                    <fullName>AZ</fullName>
                </value>
                <value>
                    <fullName>BA</fullName>
                </value>
                <value>
                    <fullName>BB</fullName>
                </value>
                <value>
                    <fullName>BD</fullName>
                </value>
                <value>
                    <fullName>BE</fullName>
                </value>
                <value>
                    <fullName>BF</fullName>
                </value>
                <value>
                    <fullName>BG</fullName>
                </value>
                <value>
                    <fullName>BH</fullName>
                </value>
                <value>
                    <fullName>BI</fullName>
                </value>
                <value>
                    <fullName>BJ</fullName>
                </value>
                <value>
                    <fullName>BL</fullName>
                </value>
                <value>
                    <fullName>BM</fullName>
                </value>
                <value>
                    <fullName>BN</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>jsImpacts__Added_from_Data_com__c</fullName>
        <formula>IF( OR(CONTAINS(TEXT(LeadSource) , &quot;Data.com&quot;), CONTAINS(TEXT(LeadSource) , &quot;Jigsaw&quot;)), &quot;Added from Data.com&quot;, &quot;Other&quot;)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Added from Data.com</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>jsImpacts__Data_com_do_not_auto_update__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Prevents automated Clean jobs from auto-filling fields with the matched Data.com record&apos;s values.</description>
        <inlineHelpText>Exclude this record from automated field updates from Data.com Clean jobs</inlineHelpText>
        <label>Data.com Does Not Auto-Update</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>jsImpacts__Data_com_managed__c</fullName>
        <formula>IF( Jigsaw&lt;&gt;&quot;&quot;, 1, 0)</formula>
        <label>Data.com Managed</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>jsImpacts__Imported_from_Jigsaw__c</fullName>
        <description>Records were added from the Data.com tab. Contacts &amp; Leads are sourced from Jigsaw and Accounts are generally sourced from D&amp;B.</description>
        <formula>IF(OR(CONTAINS(TEXT(LeadSource),&quot;Jigsaw&quot;),CONTAINS(TEXT(LeadSource),&quot;Data.com&quot;)),1,0)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Added from Data.com DEPRECATED</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>of_Offices__c</fullName>
        <label># of Offices</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>1</fullName>
                </value>
                <value>
                    <fullName>2</fullName>
                </value>
                <value>
                    <fullName>3</fullName>
                </value>
                <value>
                    <fullName>4</fullName>
                </value>
                <value>
                    <fullName>5-9</fullName>
                </value>
                <value>
                    <fullName>10+</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>pi__Needs_Score_Synced__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Used for Pardot Scoring Categories. Indicates that new scores will soon be synced from Pardot for this lead.

            Scoring Categories are used for multi-product engagement scoring in Pardot and are available to customers using Pardot Pro Edition and Pardot Ultimate Edition. Please visit this page for more information on this feature and how to set up Salesforce to view these scores: http://help.pardot.com/customer/portal/articles/2396977-scoring-categories-overview</description>
        <label>Needs Score Synced</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>pi__Pardot_Last_Scored_At__c</fullName>
        <description>Used for Pardot Scoring Categories. Indicates the last time a Scoring Category score was updated for this lead.

            Scoring Categories are used for multi-product engagement scoring in Pardot and are available to customers using Pardot Pro Edition and Pardot Ultimate Edition. Please visit this page for more information on this feature and how to set up Salesforce to view these scores: http://help.pardot.com/customer/portal/articles/2396977-scoring-categories-overview</description>
        <label>Pardot Last Scored At</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>pi__campaign__c</fullName>
        <description>The Pardot Campaign represents the first marketing touch with a prospect. It may be a campaign associated with your web site, landing page, paid search initiative, or any other marketing effort. Prospects may only be associated with one Pardot campaign. This value can later be changed manually or via an Automation Rule.</description>
        <label>Pardot Campaign</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>pi__comments__c</fullName>
        <label>Pardot Comments</label>
        <length>32000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>pi__conversion_date__c</fullName>
        <description>The date and time of the form, form handler, or landing page submission when a Pardot tracked anonymous visitor first became a known prospect.</description>
        <label>Pardot Conversion Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>pi__conversion_object_name__c</fullName>
        <description>This is the name of the object (form, form handler, landing page, or video form) that converted an anonymous visitor into a named prospect.</description>
        <label>Pardot Conversion Object Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>pi__conversion_object_type__c</fullName>
        <description>The type of object which converted an anonymous visitor into a named prospect (form, form handler, landing page, or video form).</description>
        <label>Pardot Conversion Object Type</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>pi__created_date__c</fullName>
        <description>The Pardot created date represents the date and time at which the Prospect record was created in Pardot. This will often differ from your Salesforce.com created date.</description>
        <label>Pardot Created Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>pi__first_activity__c</fullName>
        <label>Pardot First Activity</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>pi__first_search_term__c</fullName>
        <description>If a Prospects first touch was the result of a search, the field holds the term that was searched on.</description>
        <label>Pardot First Referrer Query</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>pi__first_search_type__c</fullName>
        <description>If a Prospects first touch was the result of a search, this field contains the type of search conducted.</description>
        <label>Pardot First Referrer Type</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>pi__first_touch_url__c</fullName>
        <description>The value of the referrer for the first tracked request made by a Prospect.</description>
        <label>Pardot First Referrer</label>
        <length>65000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>pi__grade__c</fullName>
        <description>The Pardot grade is based on how well a prospect fits your organization&apos;s ideal customer profile. Explicit factors such as company size, industry, job title and more help determine this value. A combination of grade (explicit) and score (implicit) can be used to very effectively optimize the sales team&apos;s time. Grade, like score, is calculated within the Pardot system and cannot be edited in Salesforce.com.</description>
        <label>Pardot Grade</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>pi__last_activity__c</fullName>
        <label>Pardot Last Activity</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>pi__notes__c</fullName>
        <label>Pardot Notes</label>
        <length>32000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>pi__pardot_hard_bounced__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Boolean that determines whether lead hard bounced.</description>
        <label>Pardot Hard Bounced</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>pi__score__c</fullName>
        <description>The Pardot score is based on implicit buying signals a lead demonstrates through his or her activities and responses to your marketing efforts. The higher the score, the more active the lead has been. A combination of score (implicit buying signals) and grade (explicit factors) helps you prioritize your prospects. Score, like grade, is calculated within the Pardot system and cannot be edited in Salesforce.com.</description>
        <label>Pardot Score</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>pi__url__c</fullName>
        <description>This link takes you directly into the relevant prospect&apos;s profile within Pardot. From there you can view his or her complete activity history. This URL is generated within the Pardot system and cannot be edited in Salesforce.com.</description>
        <label>Pardot URL</label>
        <type>Url</type>
    </fields>
    <fields>
        <fullName>pi__utm_campaign__c</fullName>
        <label>Google Analytics Campaign</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>pi__utm_content__c</fullName>
        <label>Google Analytics Content</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>pi__utm_medium__c</fullName>
        <label>Google Analytics Medium</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>pi__utm_source__c</fullName>
        <label>Google Analytics Source</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>pi__utm_term__c</fullName>
        <label>Google Analytics Term</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <listViews>
        <fullName>All_Open_Cold_Leads</fullName>
        <columns>Campaign_Name__c</columns>
        <columns>FULL_NAME</columns>
        <columns>LEAD.COMPANY</columns>
        <columns>LEAD.STATE</columns>
        <columns>LEAD.PHONE</columns>
        <columns>LEAD.EMAIL</columns>
        <columns>LEAD.STATUS</columns>
        <columns>LEAD.LAST_ACTIVITY</columns>
        <columns>CORE.USERS.FIRST_NAME</columns>
        <columns>CORE.USERS.LAST_NAME</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>LEAD.STATUS</field>
            <operation>notEqual</operation>
            <value>Qualified,Unqualified,Not Viable</value>
        </filters>
        <filters>
            <field>LEAD.RATING</field>
            <operation>equals</operation>
            <value>Cold</value>
        </filters>
        <label>All Open Cold Leads</label>
        <language>en_US</language>
    </listViews>
    <listViews>
        <fullName>All_Unqualified_Leads</fullName>
        <columns>FULL_NAME</columns>
        <columns>LEAD.COMPANY</columns>
        <columns>LEAD.CITY</columns>
        <columns>LEAD.PHONE</columns>
        <columns>LEAD.EMAIL</columns>
        <columns>LEAD.STATUS</columns>
        <columns>Market_Segment__c</columns>
        <columns>Market_Sub_Segment__c</columns>
        <columns>LEAD.LAST_UPDATE</columns>
        <columns>LEAD.LAST_ACTIVITY</columns>
        <columns>CORE.USERS.FIRST_NAME</columns>
        <columns>CORE.USERS.LAST_NAME</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>LEAD.STATUS</field>
            <operation>equals</operation>
            <value>Unqualified</value>
        </filters>
        <label>All Unqualified Leads</label>
    </listViews>
</CustomObject>